--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
 name: Daily AI Report
 on:
   schedule:
-    # 한국 시간 새벽 6시는 세계 표준시(UTC)로 전날 오후 9시 입니다.
     - cron: '0 21 * * *'
   workflow_dispatch:
 
@@ -10,16 +9,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           Python-version: '3.10'
 
       - name: Install dependencies
-        run:
-          pip install requests google-generativeai
+        run: pip install requests google-generativeai
 
       - name : Run Secretary
         env:
@@ -27,6 +25,4 @@ jobs:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           MY_EMAIL: ${{ secrets.MY_EMAIL }}
           APP_PASSWORD: ${{ secrets.APP_PASSWORD }}
-        run: 
-          1s -R  # 현재 무슨 파일이 있는지 목록을 출력해봐 (확인용)
-          python secretary.py  
+        run: python secretary.py  
