--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
 name: Daily AI Report
+
 on:
   schedule:
     - cron: '0 21 * * *'
@@ -14,15 +15,15 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          Python-version: '3.10'
+          python-version: '3.10'
 
       - name: Install dependencies
         run: pip install requests google-generativeai
 
-      - name : Run Secretary
+      - name: Run Secretary
         env:
-          NEWS_API_KEY: ${{ secrets.NEWS-API_KEY }}
+          NEWS_API_KEY: ${{ secrets.NEWS_API_KEY }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           MY_EMAIL: ${{ secrets.MY_EMAIL }}
           APP_PASSWORD: ${{ secrets.APP_PASSWORD }}
-        run: python secretary.py  
+        run: python secretary.py
